# ai-health

./: .gitignore  .vercelignore  README.md  app.py  env.example  golden_dataset.json  pyproject.toml  requirements.txt  run_api.py  run_frontend.py  setup.py  tech_stack_overview.txt  vercel.json
agents/: __init__.py  groq_client.py  triage_agent.py
api/: main.py  pyproject.toml  requirements.txt
components/: location_detector.py
frontend/: demo.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
frontend/src/components/: Dashboard.tsx  Disclaimer.tsx  Facilities.tsx  Header.tsx  Results.tsx  TriageForm.tsx  VoiceInput.tsx
scripts/: demo_complete.py  demo_voice.py  performance_test.py  simple_test.py  test_api.py  test_facility_matching.py  test_simple.py  test_triage.py
tests/: __init__.py  conftest.py  test_emergency_detection.py  test_facility_matching.py  test_golden_dataset.py  test_medical_analysis.py  test_triage_agent.py  test_voice_input.py
utils/: __init__.py  facility_matcher.py  report_generator.py  whisper_client.py
